added the content for the about me page with filler text for now

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,7 @@ body {
     /* Background pattern from Toptal Subtle Patterns */
     background-image: url(../images/webb.png);
 }
+
+#headshot {
+    float: left;
+}
